<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutpai"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayapp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        tools:ignore="NotSibling">

        <TextView
            android:id="@+id/txtCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="@string/cadastro"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/txtCadastresuaconta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtCadastro"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:text="@string/cadastre_sua_conta"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutmae"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:fontFamily="@font/manjaribold"
            android:padding="5dp"
            android:text="@string/txtViewName"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/UserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:autofillHints="name"
            android:background="@drawable/border"
            android:elevation="1dp"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/manuel_silva"
            android:inputType="textPersonName"
            android:lines="1"
            android:maxLines="1"
            android:padding="18dp" />

        <TextView
            android:id="@+id/txtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/manjaribold"
            android:padding="5dp"
            android:text="@string/senha"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:autofillHints="password"
            android:background="@drawable/border"
            android:elevation="1dp"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/_12345"
            android:inputType="textPassword"
            android:padding="18dp" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:fontFamily="@font/manjaribold"
            android:padding="5dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:autofillHints="name"
            android:background="@drawable/border"
            android:elevation="1dp"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/email_email_com"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLength="40"
            android:maxLines="1"
            android:padding="18dp" />

        <TextView
            android:id="@+id/txtCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/manjaribold"
            android:padding="5dp"
            android:text="@string/celular"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:autofillHints="password"
            android:background="@drawable/border"
            android:elevation="1dp"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/_5511912345678"
            android:inputType="phone"
            android:maxLength="13"
            android:padding="18dp" />

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/btnborder"
            android:fontFamily="@font/poppinssemibold"
            android:padding="8dp"
            android:text="@string/cadastrar"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>